# expo-rust-demo

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
components/: ImagePicker.tsx  QrImage.tsx
modules/my-rust-module/: index.ts
modules/my-rust-module/android/src/main/java/expo/modules/myrustmodule/: MyRustModule.kt
modules/my-rust-module/ios/: MyRustModule.swift
native_rust_lib/: Cargo.toml
native_rust_lib/src/: lib.rs  main.rs
