[package]
name = "native_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
rqrr = "0.7.1"
image = "0.25.1"


[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "native_rust_lib"
path = "src/lib.rs"

[[bin]]
name = "test_app"
path = "src/main.rs"

